# ProcessorFrame

./: CMakeLists.txt  aggregator.cpp  aggregator.h  bytebuffer.cpp  bytebuffer.h  comparator.h  csvreader.cpp  csvreader.h  groupby.cpp  groupby.h  main.cpp  row.cpp  row.h  schema.cpp  sorter.h  table.h  types.h  value.cpp  value.h  visitor.cpp  visitor.h
allocator/: free_list_allocator.h  free_list_pool.h
src/: CMakeLists.txt  main.cpp
src/source/: CMakeLists.txt  aggregator.cpp  aggregator.h  bytebuffer.h  comparator.h  groupby.cpp  groupby.h  schema.h  sorter.cpp  table.cpp  table.h  value.cpp  value.h  visitor.cpp
tests/: CMakeLists.txt  main.cpp  tableBuilder.h
